update stepper button, fix horizontal overflow
The over flow is because the width of body is set to 100vw.

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,5 @@
 .App {
   text-align: center;
   background-color: #fffff2;
-  width: 100vw;
-  height: 100%;
   min-height: 100vh;
 }
-
